--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -38,7 +38,7 @@
     display: block;
     width: 100%;
     height: 3px;
-    background-color: var(--sable);
+    background-color: var(--noir);
     /* DORÉ */
     border-radius: 2px;
     transition: transform 0.3s ease, opacity 0.3s ease;
