--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,7 +40,7 @@
     --vert-sapin: #082823;
     --sable: #C6A664;
     --beige: #F4EBD9;
-    --gris: #333333;
+    --gris: #D9D9D9;
 
     /* Polices */
     --font-titles: 'League Spartan', sans-serif;
@@ -60,7 +60,7 @@
 
 /* Reset de base pour la couleur de fond */
 body {
-    background-color: var(--beige);
+    background-color: var(--gris);
     color: var(--vert-sapin);
     margin: 0;
     padding: 0;
