--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,3 +22,21 @@
 @import "components/card.css";
 @import "components/form.css";
 @import "components/list.css";
+
+.button {
+    display: inline-block;
+
+    /* Plus large */
+    padding: 12px 40px;
+
+    background-color: var(--sable);
+    color: var(--gris-texte) !important;
+
+    text-transform: uppercase;
+    font-weight: 700;
+
+    border-radius: 15px !important;
+
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s, transform 0.2s;
+}
