--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,7 +27,8 @@
     display: inline-block;
 
     /* Plus large */
-    padding: 12px 40px;
+    padding: 5px 40px;
+    font-size: 2rem;
 
     background-color: var(--sable);
     color: var(--gris-texte) !important;
@@ -35,7 +36,7 @@
     text-transform: uppercase;
     font-weight: 700;
 
-    border-radius: 15px !important;
+    border-radius: 40px !important;
 
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     transition: background-color 0.3s, transform 0.2s;
