--- a/src/css/style.css
+++ b/src/css/style.css
@@ -41,3 +41,7 @@
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     transition: background-color 0.3s, transform 0.2s;
 }
+
+.no-scroll {
+    overflow: hidden;
+}
